; ModuleID = '/home/carl/AnghaBench/sway/sway/desktop/extr_xdg_shell.c_xdg_shell_view_from_view.c'
source_filename = "/home/carl/AnghaBench/sway/sway/desktop/extr_xdg_shell.c_xdg_shell_view_from_view.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sway_xdg_shell_view = type { i32 }
%struct.sway_view = type { i64 }

@SWAY_VIEW_XDG_SHELL = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [24 x i8] c"Expected xdg_shell view\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.sway_xdg_shell_view* (%struct.sway_view*)* @xdg_shell_view_from_view to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.sway_xdg_shell_view* @xdg_shell_view_from_view(%struct.sway_view* %0) #0 {
  %2 = alloca %struct.sway_xdg_shell_view*, align 8
  %3 = alloca %struct.sway_view*, align 8
  store %struct.sway_view* %0, %struct.sway_view** %3, align 8
  %4 = load %struct.sway_view*, %struct.sway_view** %3, align 8
  %5 = getelementptr inbounds %struct.sway_view, %struct.sway_view* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @SWAY_VIEW_XDG_SHELL, align 8
  %8 = icmp eq i64 %6, %7
  %9 = zext i1 %8 to i32
  %10 = call i32 @sway_assert(i32 %9, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %13, label %12

12:                                               ; preds = %1
  store %struct.sway_xdg_shell_view* null, %struct.sway_xdg_shell_view** %2, align 8
  br label %16

13:                                               ; preds = %1
  %14 = load %struct.sway_view*, %struct.sway_view** %3, align 8
  %15 = bitcast %struct.sway_view* %14 to %struct.sway_xdg_shell_view*
  store %struct.sway_xdg_shell_view* %15, %struct.sway_xdg_shell_view** %2, align 8
  br label %16

16:                                               ; preds = %13, %12
  %17 = load %struct.sway_xdg_shell_view*, %struct.sway_xdg_shell_view** %2, align 8
  ret %struct.sway_xdg_shell_view* %17
}

declare dso_local i32 @sway_assert(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
